--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@barba/core": "^2.9.7",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
+    "stats.js": "^0.17.0",
+    "three": "^0.124.0",
     "vue": "^3.0.0",
+    "vue-3d-model": "^1.3.1",
+    "vue-devtools": "^5.1.4",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
@@ -26,6 +31,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
     "less": "^3.0.4",
-    "less-loader": "^5.0.0"
+    "less-loader": "^5.0.0",
+    "vue-svg-loader": "^0.17.0-beta.2"
   }
 }
